<resources>
    <string name="app_name">FloraAD</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="listar_flora_fragment_label">Listar Flora Fragment</string>
    <string name="listar_imagen_fragment_label">Listar imagen Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for flora labels -->
    <string name="Imagen">Imagenes</string>
    <string name="flora">Flora</string>
    <string name="nombre">Nombre</string>
    <string name="familia">Familia</string>
    <string name="identificacion">Identificacion</string>
    <string name="altitud">Altitud</string>
    <string name="habitat">Habitat</string>
    <string name="fitosociologia">Fitosociologia</string>
    <string name="biotipo">Biotipo</string>
    <string name="biologia_reproductiva">Biologia_reproductiva</string>
    <string name="floracion">Floracion</string>
    <string name="fructificacion">Fructificacion</string>
    <string name="expresion_sexual">Expresion_sexual</string>
    <string name="polinizacion">Polinizacion</string>
    <string name="dispersion">Dispersion</string>
    <string name="numero_cromosomatico">Numero_cromosomatico</string>
    <string name="reproduccion_asexual">Reproduccion_asexual</string>
    <string name="distribucion">Distribucion</string>
    <string name="biologia">Biologia</string>
    <string name="demografia">Demografia</string>
    <string name="amenazas">Amenazas</string>
    <string name="medidas_propuestas">Medidas_propuestas</string>

    <string name="txtbtCancelar">Cancelar</string>
    <string name="Next">Siguiente</string>
    <string name="subirImagen">Subir imagen</string>
    <string name="finalAdd">Finalizar</string>
    <string name="idFlora">IdFlora</string>
    <string name="descripcion">Descripcion</string>
    <string name="descripImgView">Imagen del recylcer view</string>
    <string name="nuevaFlora">Nueva FloraFauna</string>
    <string name="nombreFlora">Nombre Flora</string>
</resources>